# playground

./: .gitignore  README.md
agda/hott/: Hott-UF-Agda.agda  Universes.agda
agda/taste/: dep-type.agda  lookup.agda  prog.agda  proof.agda
gan/: .gitignore  gan.py  utils.py
htbb/: README.md  ch01_single_neuron.py  ch02_scalar.py  ch02_vector.py  ch03_linear.py  ch03_non_linear.py  ch03_sum.py  ch04_struct.py  haproxy.cfg
ios/measure/: README.md
know_graph_nlp/: INSTALL
lean4/fpil/: 1_1_ee.lean  1_2_types.lean  1_3_func_def.lean  1_4_structures.lean  1_5_dt_pat.lean  1_6_polymorphism.lean  1_7_addl_conv.lean  2_1_run_program.lean  2_2_step_by_step.lean  2_5_add_conv.lean  3_interlude_prop_proof_index.lean  4_1_pos_num.lean  4_2_type_cls_polymoph.lean  4_3_ctrl_inst_srch.lean  4_4_arr_idx.lean  4_5_std_clss.lean  4_6_coercions.lean  4_7_addl_convn.lean  5_monads.lean  (+1 more)
material-react/: package-lock.json  package.json
nlp/: allen_ner.py  spacy_proc.py
pytorch/: cartpole_dqn.py  cbow.py  cifar10.py  lang_trans.py  lenet.py  lstm.py  name_class.py  name_gen.py  ngram.py  style_transfer.py  transfer_learning.py
react-static/: package-lock.json  package.json  static.config.js
rust/: rustfmt.toml
rust-grpc-web/: .gitignore  Cargo.toml
rust-grpc-web/client/wasm/: Cargo.toml  build.rs  wasm_api.proto  wasm_build.sh  wasm_ts_wrapper_plugin.py
rust-grpc-web/client/wasm/src/: lib.rs
rust-grpc-web/server/: Cargo.toml  build.rs
rust-grpc-web/server/src/: main.rs
tensorflow/: fminst.py
three/: index.html
wifi_robot/: robo_client.py
wiki/: wiki.py
(+75 files in other folders)
