[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.2"
tonic-web = "0.2"
log = "0.4.14"
simple_logger = "2.1.0"
proto-api = { path = "../proto/api" }
shared = { path = "../shared" }