[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
log = "0.4.14"
wasm-logger = "0.2.0"
shared = { path = "../../shared" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
