[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = "0.9"
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
log = "0.4.14"
wasm-logger = "0.2.0"
proto-data = { path = "../../proto/data" }
shared = { path = "../../shared" }

[build-dependencies]
prettyplease = {version = "0.1"}
proc-macro2 = "1.0"
prost-build = "0.9"
quote = "1.0"
syn = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
